Fix logo being misaligned in Firefox on login

--- a/src/style/modules/login/_login.scss
+++ b/src/style/modules/login/_login.scss
@@ -60,6 +60,7 @@
 
 	.logo {
 		margin-bottom: 15px;
+		width: 300px;
 		height: 25px;
 		fill: white;
 		display: inline-block;
